<resources>
    <string name="app_name">Shopping Helper</string>
    <string name="dir_name">ShoppingHelper</string>
    <string name="action_settings">Settings</string>

    <string name="date">Date</string>
    <string name="expenseType">Type of expense</string>
    <string name="purpose">Purpose</string>
    <string name="amount">Amount</string>
    <string name="paidBy">Paid by</string>
    <string name="expense">Expense</string>
    <string name="selectedFile">Select file</string>

    <string name="checkDate">Select a date of the current month</string>
    <string name="checkPurpose">You must state a purpose</string>
    <string name="checkAmount_Empty">You must specify an amount</string>
    <string name="checkAmount_Invalid">The specified amount is invalid</string>

    <string-array name="autocomplete_shop_item">
        <item>Aldi</item>
        <item>Brot</item>
        <item>Kaisers</item>
        <item>Milch</item>
        <item>Aufschnitt</item>
        <item>Sonstiges</item>
        <item>Geschenke</item>
        <item>Putzmittel</item>
        <item>Waschmittel</item>
        <item>Drucker</item>
        <item>Bier</item>
        <item>Getränke</item>
    </string-array>
</resources>
